examples/test/testpolicy11915.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11915
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key34: value24
      key26: value20
      key27: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value45
          key12: value35
          key24: value18
